fixed spacing and sizing withing product page

--- a/pages/css/productPage.css
+++ b/pages/css/productPage.css
@@ -5,27 +5,30 @@
     padding-top: 2rem;
     max-width: 1200px;
     width: 100%;
+    margin: 0 auto;
 }
 
 
 .product-details{
+    flex: 1.5;
     display: flex;
     flex-direction: column;
     align-items: left;
-    gap: 0.1rem;
+    gap: 0.4rem;
 }
+
 
 .title-price{
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
     gap: 2rem;
 }
 
 .title-price h4{
     font-family: Sinhala Sangam MN;
-    font-size: 20px;
+    font-size: 2rem;
     color: #CB5A04;
 }
 
@@ -34,14 +37,16 @@
 }
 
 .all-images{
+    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    padding-left: 3rem;
 }
 
 .product-images{
-    width: 350px;
-    height: 350px;
+    width: 100%;
+    height: auto;
     background-color: #FFDB77;
     justify-content: center;
 }
@@ -49,6 +54,7 @@
 .image-gallery{
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 0.3rem;
 }
 
@@ -72,12 +78,14 @@
 .weight-quantity{
     display: flex;
     flex-direction: row;
+    width: 100%;
     justify-content: space-between;
+    margin-top: 1.5rem;
 }
 
 .weight{
-    width: 50px;
-    height: 30px;
+    width: 70px;
+    height: 35px;
     background-color: #FFDB77;
     border-radius: 3rem;
     text-decoration: none;
@@ -106,29 +114,42 @@
 
 .weight-selection p{
     font-weight: bold;
+    font-size: 1rem;
 }
 
 .add-to-cart{
-    width: 420px;
-    height: 50px;
+    width: 100%;
+    height: 55px;
     background-color: #286376;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
+    box-sizing: border-box;
 }
 
 .add-to-cart p{
     color: #FFFBF2;
-    font-size: 20px;
+    font-size: 1.5rem;
 }
 
 details {
-  padding: 12px 16px;
-  max-width: 450px;
+  padding: 12px 0;
+  width: 100%;
 }
 
 summary{
     list-style: none;
     font-family: Sinhala Sangam MN;
     font-size: 1.5rem;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+summary::-webkit-details-marker {
+  display: none;
+}
+
+summary::after {
+  content: 'v';
 }
 
 .reviews{
@@ -136,24 +157,41 @@ summary{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-left: 1rem;
+    gap: 0.5rem;
 }
 
-.reviews img{
+.review-layout{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 1rem;
+}
+
+.star-rating img{
     max-width: 100%;
     height: auto;
     width: 4rem;
 }
 
-summary::after {
-  content: 'v';
-  float: right;
-}
-
 .name-review{
+    align-self: flex-start;
     display: flex;
     flex-direction: row;  
-    align-items: left;
-    gap: 2rem;  
-    max-width: 500px;
+    gap: 1rem;  
+    padding-left: 10rem;
+    width: 100%;
+    max-width: 80%;
+}
+
+.profile-pic{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    flex-shrink: 0;
+}
+
+.reviewer-info img{ 
+    max-width: 100%;
+    width: 5rem;
 }
